--- a/directories.html
+++ b/directories.html
@@ -7,6 +7,24 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    
+    <div>
+        <ul>
+            <li><a href="/boxes/boxes.html">Boxes</a><p>2024-01-03 <span class="completed">Completed</span></p></li>
+            <li><a href="/business-card/card.html">Busines card</a><p>2024-01-12, <span class="not-completed">Not Completed</span></p></li>
+            <li><a href="/calendar/calendar.html">Calendar</a><p>2024-01-02, <span class="completed">Completed</span></p></li>
+            <li><a href="/contact-form/form.html">Contact Form</a><p>2024-01-09, <span class="completed">Completed</span></p></li>
+            <li><a href="/forma/forma.html">Another Contact Form</a><p>2024-01-06, <span class="completed">Completed</span></p></li>
+            <li><a href="/game-layout/layout.html">2024 Game Layout</a><p>2024-01-03, <span class="completed">Completed</span></p></li>
+            <li><a href="/invoice/invoice.html">Invoice Layout</a><p>2024-01-03, <span class="completed">Completed</span></p></li>
+            <li><a href="/login-form/form.html">Login Form</a><p>2024-01-09, <span class="completed">Completed</span></p></li>
+            <li><a href="/mini-blog/blog.htm">Mini Blog</a><p>2024-01-11, <span class="completed">Completed</span></p></li>
+            <li><a href="/page-template/template.html">Page Template</a><p>2024-01-08, <span class="completed">Completed</span></p></li>
+            <li><a href="/payment-gateway-two/payment.htm">Payment Gateway</a><p>2024-01-10, <span class="completed">Completed</span></p></li>
+            <li><a href="/payment-gateway/payment.html">Payment Gateway Two</a><p>2024-01-10, <span class="completed">Completed</span></p></li>
+            <li><a href="/photo-galery/galery.html">Photo Galery</a><p>2024-01-08, <span class="completed">Completed</span></p></li>
+            <li><a href="/shoping-cart/cart.html">Shoping Cart</a><p>2024-01-12, <span class="completed">Completed</span></p></li>
+            <!-- <li><a href=""></a><p>2024-01-10, <span class="completed">Completed</span></p></li> -->
+        </ul>
+    </div>
 </body>
 </html>
